--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "patriot",
   "version": "1.0.0",
-  "description": "Patriot: An Ionic project",
+  "description": "Parad 9 May 2015",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
