--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "html-loader": "^0.3.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
